Make basic website

--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,23 @@ body {
 
 .container {
     background-color: #aaaaaa;
-    margin-left: 10px;
-    margin-right: 10%;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+}
+
+.image {
+    flex: auto;
+    width: 20%;
+    margin: 10px;
+    padding: 0;
+}
+
+.box {
+    flex: auto;
+    width: 20%;
 }
