--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,8 @@ body {
     margin-top: 10px;
     margin-bottom: 10px;
     display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
+    flex-flow: row;
+    justify-content: space-between;
 }
 
 .image {
@@ -37,7 +37,9 @@ body {
     padding: 0;
 }
 
-.box {
-    flex: auto;
-    width: 20%;
+.infobox {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-around;
+    width: 80%;
 }
