--- a/css/style.css
+++ b/css/style.css
@@ -1,45 +1,73 @@
 body {
-    background-color: #aaaaaa;
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #ffffff;
-    margin: 0;
-    padding: 0;
+  background-color: #aaaaaa;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #ffffff;
+  margin: 0;
+  padding: 0;
+}
+
+.navbar {
+  background-color: #555555;
+}
+
+.nav-container {
+  margin-left: 10px;
+  margin-right: 10px;
+  height: auto;
+  display: flex;
+  list-style-type: none;
+}
+
+.navlink {
+  flex: auto;
+  float: left;
+  width: 100%;
+}
+
+.link-navigation {
+  text-decoration: none;
+  text-align: center;
+  display: block;
+  background-color: green;
+  margin: 5px;
+  padding: 5px;
+  color: #ffffff;
 }
 
 .title {
-    font-size: 40px;
-    font-weight: 700;
-    line-height: 1.5;
-    color: #ffffff;
-    background-color: #aaaaaa;
-    margin: 10px;
-    padding: 0;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 1.5;
+  color: #ffffff;
+  background-color: #aaaaaa;
+  margin: 10px;
+  padding: 0;
 }
 
 .container {
-    background-color: #aaaaaa;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    display: flex;
-    flex-flow: row;
-    justify-content: space-between;
+  background-color: #aaaaaa;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  display: flex;
+  flex-flow: row;
+  justify-content: space-between;
 }
 
 .image {
-    flex: auto;
-    width: 20%;
-    margin: 10px;
-    padding: 0;
+  flex: auto;
+  width: 20%;
+  margin: 10px;
+  padding: 0;
 }
 
 .infobox {
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: space-around;
-    width: 80%;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: space-around;
+  width: 80%;
 }
